Fix red link color in dark mode
Bug: T363778

--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -23,6 +23,10 @@
 html.skin-theme-clientpref-night {
 	color-scheme: dark;
 	.cdx-mode-dark();
+
+	// T363911 Temporarily override Codex variable for Vector night mode release
+	// Remove after task has been resolved and new color is available in Codex.
+	--color-link-red: #b97876;
 }
 
 html.skin-theme-clientpref-night .skin-invert {
@@ -44,6 +48,10 @@ html.skin-theme-clientpref-night .notheme {
 	html.skin-theme-clientpref-os {
 		color-scheme: light dark;
 		.cdx-mode-dark();
+
+		// T363911 Temporarily override Codex variable for Vector night mode release
+		// Remove after task has been resolved and new color is available in Codex.
+		--color-link-red: #b97876;
 	}
 
 	html.skin-theme-clientpref-os .notheme {
