--- a/resources/skins.vector.styles/components/MenuTabs.less
+++ b/resources/skins.vector.styles/components/MenuTabs.less
@@ -33,7 +33,7 @@
 
 	.mw-list-item.new a,
 	.mw-list-item.new a:visited {
-		color: @color-link-new;
+		color: @color-link-red;
 	}
 
 	.mw-list-item.selected a,
